# ag_foundation

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLI_REFERENCE.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
Convergent/: CHANGELOG.md
Convergent/docs/: INDEX_BACKLOG.md  INDEX_BUGS.md  INDEX_DECISIONS.md  INDEX_SPRINTS.md
Convergent/docs/additional/: LANGCHAIN_ANALYSIS_0.1.md  OBSERVATION_TRIAGE_0.1.md  SCHEMA_INVENTORY.md
Convergent/docs/project/: PROJECT_CONTROL_0.1.md  PROJECT_ROADMAP_0.1.md
Convergent/foundation/: GOVERNANCE_STANDARD.md  SPRINT_PLAYBOOK.md
Convergent/foundation/sources/: FOLDER_STRUCTURE.md  LIFECYCLE_REGISTRY.md  SESSION_CHAIN.md
Convergent/foundation/templates/: ADR_TEMPLATE.md  BACKLOG_ITEM_TEMPLATE.md  BUG_REPORT_TEMPLATE.md  INDEX_BACKLOG_TEMPLATE.md  INDEX_BUGS_TEMPLATE.md  INDEX_DECISIONS_TEMPLATE.md  INDEX_SPRINTS_TEMPLATE.md  PROJECT_CONTROL_TEMPLATE.md  PROJECT_ROADMAP_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  SPRINT_DESCRIPTION_TEMPLATE.md  SPRINT_REVIEW_TEMPLATE.md
docs/dev/: CHANGELOG.md  STRUCTURE_TARGET.md
docs/dev/additional/: ARCHITECTURAL_FINDINGS_0_2.md  CONTRACT_INVENTORY.md  GOVERNANCE_SIMPLIFICATION_PLAN_0.1.md  GVS_FEEDBACK_NOTES.md  GVS_PROJECT_PLAN_0.1.md  S16_OBSERVATIONS_0.1.md  SCHEMA_INVENTORY.md  sprint_velocity_charts.html
docs/dev/backlog/: INDEX.md  INDEX_BACKLOG.md  WORKFLOW.md
docs/dev/bugs/: INDEX.md  INDEX_BUGS.md
docs/dev/cornerstone/: CLI_REFERENCE.md  INDEX.md  PROJECT_PLAN.md  REVIEW_GUIDE.md
docs/dev/decisions/: INDEX_DECISIONS.md
docs/dev/engineering/: CODING_GUIDELINES.md  INDEX.md  PR_CHECKLIST.md  TESTING_GUIDELINES.md
docs/dev/foundation/: ENGINEERING_GUIDELINES.md  FOLDER_STRUCTURE_0.2.md  FOLDER_STRUCTURE_0.3.md  FOUNDATION_MANUAL.md  PROCESS_GUIDELINES.md  PROJECT_PLAN_0.2.md  REPO_HYGIENE.md  SPRINT_MANUAL.md
docs/dev/handoff/: 2026-02-24_AF-0006_storage-baseline.md  2026-02-24_AF-0009_artifacts-v0.md  2026-02-24_AF-0010_python-bootstrap.md  README.md
docs/dev/playbooks/: INDEX.md
docs/dev/prompts/: INDEX.md
docs/dev/repo/: INDEX.md
docs/dev/reviews/: INDEX.md
docs/dev/sprints/: INDEX.md  INDEX_SPRINTS.md  PROCESS.md  SPRINT_03_PLAN.md  SPRINT_LOG.md  SPRINT_PLAN_SPRINT01.md  SPRINT_REPORT_SPRINT01.md  SPRINT_REPORT_SPRINT02_HARDENING.md  SPRINT_REPORT_SPRINT03.md  Sprint04_DESCRIPTION.md
docs/dev/team/: COLLABORATION_MANIFEST.md  GITHUB_FLOW.md  REPO_HYGIENE_LIST.md
docs/dev_bkup02/additional/: CONTRACT_INVENTORY.md  GVS_FEEDBACK_NOTES.md  MA_AUDIT_REPORT_2026-04-12.md  Präsentation1.pptx  SKILLS_ARCHITECTURE_0.1.md  SPRINT_VELOCITY_ANALYSIS_0.1.md
docs/dev_bkup02/backlog/: INDEX_BACKLOG.md
docs/dev_bkup02/decisions/: INDEX_DECISIONS.md
docs/dev_bkup02/foundation/: FOLDER_STRUCTURE_0.2.md  PROJECT_PLAN_0.2.md  SPRINT_MANUAL.md
docs/dev_bkup02/sprints/: INDEX_SPRINTS.md
docs/export/backlog/: INDEX_BACKLOG.md
docs/export/bugs/: INDEX_BUGS.md
docs/export/decisions/: INDEX_DECISIONS.md
docs/export/foundation/: FOLDER_STRUCTURE_0.2.md  (+4 more)
docs/old_dev/: STRUCTURE_CURRENT.md  STRUCTURE_TARGET.md
src/ag/: __init__.py  config.py
tests/: __init__.py  conftest.py  test_artifacts.py  test_cli.py  test_cli_global_options.py  test_cli_truthful.py  test_config.py  test_confirmation_hooks.py  test_contracts.py  test_delegation.py  test_documentation_drift.py  test_e2e_integration.py  test_executor.py  test_plan.py  test_planner.py  test_providers.py  test_research_skills.py  test_runtime.py  test_sanity.py  test_schema_verifier.py  test_skill_framework.py  test_storage.py  test_strategic_brief.py  test_summarize_skills.py  test_trace_enrichment.py  test_web_search.py
(+837 files in other folders)
