[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ag-foundation"
version = "0.1.0"
description = "Modular agent network core runtime"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "ag_foundation team" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "ddgs>=6.0.0",  # Renamed from duckduckgo-search
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "openai>=1.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.0.0",
]
llm = [
    "openai>=1.0.0",
]

[project.scripts]
ag = "ag.cli.main:app"

# AF0077: Skill plugin architecture - built-in skills as entry points
[project.entry-points."ag.skills"]
load_documents = "ag.skills.load_documents:LoadDocumentsSkill"
emit_result = "ag.skills.emit_result:EmitResultSkill"
fetch_web_content = "ag.skills.fetch_web_content:FetchWebContentSkill"
synthesize_research = "ag.skills.synthesize_research:SynthesizeResearchSkill"
web_search = "ag.skills.web_search:WebSearchSkill"
zero_skill = "ag.skills.zero_skill:ZeroSkill"

# AF0078: Playbook plugin architecture - built-in playbooks as entry points
[project.entry-points."ag.playbooks"]
default_v0 = "ag.playbooks.default_v0:DEFAULT_V0"
delegate_v0 = "ag.playbooks.delegate_v0:DELEGATE_V0"
research_v0 = "ag.playbooks.research_v0:RESEARCH_V0"
summarize_v0 = "ag.playbooks.summarize_v0:SUMMARIZE_V0"
test_skill = "ag.playbooks.test_skill:TEST_SKILL"

[tool.hatch.build.targets.wheel]
packages = ["src/ag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v -m 'not integration and not manual'"
markers = [
    "integration: marks tests that require external services (deselect with '-m \"not integration\"')",
    "manual: marks tests that require real API keys/network and should be run manually",
]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = "src"
